test_regress/t/t_preproc_kwd_bad.out
%Error: t/t_preproc_kwd_bad.v:8:1: `end_keywords when not inside `begin_keywords block
    8 | `end_keywords   
      | ^~~~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
